--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
         "jsonwebtoken": "^9.0.3",
         "multer": "^2.0.2",
         "mysql2": "^3.16.2",
+        "mysqldump": "^3.2.0",
         "socket.io": "^4.8.3"
     },
     "devDependencies": {
